# rspyts

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MAINTAINING.md  README.md  TESTING.md  rust-toolchain.toml
crates/rspyts/: Cargo.toml  README.md
crates/rspyts-cli/: Cargo.toml  README.md
crates/rspyts-cli/src/: build.rs  cargo.rs  cli.rs  commands.rs  config.rs  contract.rs  diff.rs  documentation.rs  exclude.rs  init.rs  lib.rs  load.rs  main.rs  output.rs  project.rs  python.rs  resolve.rs  typescript.rs  validate.rs
crates/rspyts-cli/src/emit/: mod.rs  python.rs  schema.rs  test_manifest.rs  typescript.rs  util.rs
crates/rspyts-cli/src/project/: mod.rs  validation.rs
crates/rspyts-cli/src/python/: api.rs  mod.rs  models.rs  render.rs
crates/rspyts-cli/src/typescript/: api.rs  declarations.rs  mod.rs  render.rs
crates/rspyts-cli/tests/: build_command.rs  cli.rs  commands.rs  documentation.rs
crates/rspyts-core/: Cargo.toml  README.md
crates/rspyts-core/src/: bridged.rs  envelope.rs  error.rs  handles.rs  ir.rs  lib.rs  registry.rs  shim.rs  wire.rs
crates/rspyts-macros/: Cargo.toml  README.md
crates/rspyts-macros/src/: application.rs  attributes.rs  attrs.rs  casing.rs  classes.rs  consts.rs  docs.rs  emit.rs  export.rs  functions.rs  lib.rs  model.rs  serde_reflect.rs  sig.rs  types.rs
crates/rspyts-macros/tests/: ui.rs
crates/rspyts-macros/tests/pass/: native_abi_types.rs  target_scoped_lifecycle_names.rs
crates/rspyts-macros/tests/ui/: async_fn.rs  async_fn.stderr  attachment_without_tail.rs  attachment_without_tail.stderr  bridge_serde_missing_derive.rs  bridge_serde_missing_derive.stderr  bridge_serde_on_error_enum.rs  bridge_serde_on_error_enum.stderr  bridge_serde_unknown_fields.rs  bridge_serde_unknown_fields.stderr  buf_param.rs  buf_param.stderr  const_unsupported.rs  const_unsupported.stderr  ctorless_class.rs  ctorless_class.stderr  generic_fn.rs  generic_fn.stderr  generic_struct.rs  generic_struct.stderr  method_named_close.rs  method_named_close.stderr  method_named_constructor.rs  method_named_constructor.stderr  method_named_dispose.rs  method_named_dispose.stderr  method_named_drop.rs  method_named_drop.stderr  method_named_free.rs  method_named_free.stderr  method_named_new.rs  method_named_new.stderr  mixed_enum.rs  mixed_enum.stderr  mut_ref_param.rs  mut_ref_param.stderr  non_pub_field.rs  non_pub_field.stderr  rename_rejected.rs  rename_rejected.stderr  (+44 more)
crates/rspyts/src/: bridge.rs  codec.rs  ir.rs  lib.rs  registry.rs  runtime.rs  types.rs  wire.rs
crates/rspyts/src/backend/: buffer.rs  mod.rs  python.rs  schema.rs  typescript.rs
crates/rspyts/src/backend/typescript/: typed.rs
crates/rspyts/tests/: backend_buffer_codec.rs  backend_python.rs  backend_schema.rs  backend_wasm.rs  codec.rs  constant_registration_infinity.rs  constant_registration_nan.rs  contract.rs  expansion.rs  ir.rs  macro_contracts.rs  module_target_hygiene.rs  nullable.rs  python.rs  wire.rs
crates/rspyts/tests/fixtures/: mod.rs
example/clients/python/: pyproject.toml  typecheck.py
example/clients/python/example_client/: __init__.py
example/clients/python/tests/: test_client.py
example/crates/bindings/: Cargo.toml
example/crates/bindings/src/: lib.rs
example/crates/dice/: Cargo.toml  rspyts.toml
example/crates/dice/src/: lib.rs  summary.rs
example/crates/dice/src-py/: pyproject.toml
example/crates/dice/src-py/example/: __init__.py  convenience.py
example/crates/dice/src-ts/: package-lock.json  package.json  tsconfig.json
example/crates/dice/src-ts/example/convenience/: index.ts
example/crates/dice/src-ts/scripts/: copy-assets.mjs
example/crates/dice/src/fair/: mod.rs  roll.rs
example/crates/dice/src/loaded/: mod.rs  roll.rs
example/src-py/: pyproject.toml  typecheck.py
example/src-py/example/: __init__.py
example/src-py/example/convenience/: __init__.py
example/src-py/tests/: test_boundaries.py  test_example.py  test_readings.py
examples/basic/python/: pyproject.toml
examples/basic/python/src/basic_example/: __init__.py
examples/basic/python/tests/: test_end_to_end.py
examples/basic/rust/: Cargo.toml
examples/basic/rust/src/: lib.rs
examples/contract/python/: pyproject.toml
examples/contract/python/tests/: test_host_behavior.py
examples/contract/rust/: Cargo.toml
examples/contract/rust/src/: lib.rs
examples/cross-package/consumer/python/: pyproject.toml
examples/cross-package/consumer/python/tests/: test_host_behavior.py
examples/cross-package/consumer/rust/: Cargo.toml
examples/cross-package/consumer/rust/src/: lib.rs
examples/cross-package/evaluation/rust/: Cargo.toml
examples/cross-package/evaluation/rust/src/: lib.rs
examples/cross-package/hardware/rust/: Cargo.toml
examples/cross-package/hardware/rust/src/: lib.rs
examples/cross-package/owner/python/: pyproject.toml
examples/cross-package/owner/python/src/example/owner/: __init__.py
examples/cross-package/owner/python/tests/: test_host_behavior.py
examples/cross-package/owner/rust/: Cargo.toml
examples/cross-package/owner/rust/src/: lib.rs
examples/cross-package/reports/rust/: Cargo.toml
examples/cross-package/reports/rust/src/: lib.rs
examples/multi-crate/app/python/: pyproject.toml
examples/multi-crate/app/python/src/multi_crate_app/: __init__.py
examples/multi-crate/app/python/tests/: test_shared_identity.py
examples/multi-crate/app/rust/: Cargo.toml
examples/multi-crate/app/rust/src/: lib.rs
examples/multi-crate/shared/module/: Cargo.toml
examples/multi-crate/shared/module/src/: lib.rs
examples/multi-crate/shared/rust/: Cargo.toml
examples/multi-crate/shared/rust/src/: lib.rs
examples/static/rust/: Cargo.toml
examples/static/rust/src/: lib.rs
runtimes/python/: README.md  pyproject.toml
runtimes/python/src/rspyts/: __init__.py  _internal.py  contract.py  envelope.py  errors.py  hatch.py  internal.py  library.py  native_wheel.py  types.py
runtimes/python/tests/: test_contract.py  test_envelope.py  test_errors.py  test_hatch.py  test_library.py  test_native_wheel.py  test_types.py
(+136 files in other folders)
