[workspace]
resolver = "2"
members = [
    "crates/rspyts",
    "crates/rspyts-macros",
    "crates/rspyts-cli",
    "examples/static/rust",
]
default-members = [
    "crates/rspyts",
    "crates/rspyts-macros",
    "crates/rspyts-cli",
]

[workspace.package]
version = "0.4.6"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/2xf-org/rspyts"
homepage = "https://github.com/2xf-org/rspyts"
authors = ["Felipe Faria", "The rspyts contributors"]

[workspace.dependencies]
rspyts = { version = "=0.4.6", path = "crates/rspyts" }
rspyts-macros = { version = "=0.4.6", path = "crates/rspyts-macros" }

anyhow = "1.0"
atomicwrites = "0.4.4"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
fs4 = "1.1"
heck = "0.5"
inventory = "0.3.24"
js-sys = "=0.3.103"
libloading = "0.9"
proc-macro2 = "1.0"
pyo3 = { version = "0.29.0", features = ["abi3-py311"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
syn = { version = "2.0", features = ["full", "extra-traits"] }
thiserror = "2.0"
tempfile = "3.27"
toml = "1.0"
wasm-bindgen = "=0.2.126"
wasm-bindgen-test = "=0.3.76"

[profile.release]
lto = true
codegen-units = 1
