[package]
name = "rspyts-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Compiler and build orchestrator for rspyts"
keywords = ["ffi", "python", "typescript", "wasm", "codegen"]
categories = ["command-line-utilities", "development-tools::ffi"]

[[bin]]
name = "rspyts"
path = "src/main.rs"
doc = false

[dependencies]
rspyts.workspace = true
anyhow.workspace = true
clap.workspace = true
libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
