[package]
name = "rspyts-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Compiler and build orchestrator for rspyts"
keywords = ["ffi", "python", "typescript", "wasm", "codegen"]
categories = ["command-line-utilities", "development-tools::ffi"]
include = ["src/**", "README.md", "LICENSE"]

[[bin]]
name = "rspyts"
path = "src/main.rs"

[dependencies]
rspyts.workspace = true
anyhow.workspace = true
clap.workspace = true
fs4.workspace = true
libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
