[package]
name = "rspyts-core"
description = "Core IR, ABI envelope, and registry for the rspyts bridge. Not for direct use; depend on `rspyts`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
exclude = ["tests/**"]

[dependencies]
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
