[package]
name = "rspyts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Compile one Rust API into Python and TypeScript packages"
keywords = ["ffi", "python", "typescript", "wasm", "codegen"]
categories = ["development-tools::ffi", "wasm"]
include = ["src/**", "README.md", "LICENSE"]

[features]
default = []
python = ["dep:pyo3", "dep:serde-pyobject"]
python-extension = ["python", "pyo3/extension-module"]
wasm = ["dep:js-sys", "dep:serde-wasm-bindgen", "dep:wasm-bindgen"]

[dependencies]
chrono.workspace = true
rspyts-macros.workspace = true
inventory.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
pyo3 = { workspace = true, optional = true }
serde-pyobject = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
