[package]
name = "rspyts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Compile one Rust API into Python and TypeScript packages"
keywords = ["ffi", "python", "typescript", "wasm", "codegen"]
categories = ["development-tools::ffi", "wasm"]
include = ["src/**", "tests/**", "README.md", "LICENSE"]

[features]
python-extension = ["pyo3/extension-module"]

[dependencies]
rspyts-macros.workspace = true

chrono.workspace = true
inventory.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3.workspace = true
pythonize.workspace = true
serde-pyobject.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
