# User-owned package configuration; rspyts never modifies this file.
# Keep project.version aligned with Cargo.toml and add dependencies or tooling here.

[build-system]
requires = ["pdm-backend>=2.4,<3"]
build-backend = "pdm.backend"

[project]
name = "example"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2,<3"]

[tool.pdm.build]
includes = ["example"]
is-purelib = false

[tool.mypy]
mypy_path = "."

[tool.pyright]
extraPaths = ["."]
pythonVersion = "3.11"
