# User-owned package configuration; rspyts never modifies this file.
# Keep project.version aligned with Cargo.toml and add dependencies or tooling here.

[build-system]
requires = ["pdm-backend>=2.4,<3"]
build-backend = "pdm.backend"

[project]
name = "example"
version = "0.1.0"
description = "A sensor-reading toolkit built with rspyts"
requires-python = ">=3.11"
dependencies = ["numpy>=2,<3", "pydantic>=2,<3"]

[project.optional-dependencies]
dev = ["mypy>=1,<2", "pyright>=1,<2", "pytest>=8,<9"]

[tool.pdm.build]
includes = ["example"]
is-purelib = false

[tool.mypy]
mypy_path = "."

[tool.pyright]
extraPaths = ["."]
pythonVersion = "3.11"
