[project]
name = "rspyts"
version = "0.3.0"
description = "Python runtime for rspyts: pydantic contracts and a ctypes loader for Rust cdylibs bridged with the rspyts ABI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
hatch = [
    "hatchling>=1.27,<2.0",
    "packaging>=24",
    "pefile>=2023.2.7; sys_platform == 'win32'",
    "pyelftools>=0.31; sys_platform == 'linux'",
]

[project.entry-points.hatch]
rspyts = "rspyts.hatch"

[project.urls]
Homepage = "https://github.com/2xf-org/rspyts"
Repository = "https://github.com/2xf-org/rspyts"
Issues = "https://github.com/2xf-org/rspyts/issues"

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "ty>=0.0.1a1",
    "vulture>=2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rspyts --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.vulture]
paths = ["src", "tests"]
ignore_names = ["model_config", "isolated_registry", "clean_env", "demo__*"]

[tool.uv.build-backend]
source-include = ["tests/**"]
source-exclude = ["/.gitignore", "/uv.lock"]
