[project]
name = "example-client"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["example"]

[tool.uv.sources]
example = { path = "../../crates/bindings/dist/python" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example_client"]

[dependency-groups]
dev = ["pytest>=8,<9"]
