[project]
name = "example-client"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["example"]

[tool.uv.sources]
example = { path = "../../crates/bindings/dist/python" }

[tool.mypy]
mypy_path = "../../crates/bindings/dist/python"

[tool.pyright]
extraPaths = ["../../crates/bindings/dist/python"]
pythonVersion = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example_client"]

[dependency-groups]
dev = ["mypy>=1,<2", "pyright>=1,<2", "pytest>=8,<9"]
