[project]
name = "example-client"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["example"]

[tool.uv.sources]
example = { path = "../../crates/dice/src-py" }

[tool.mypy]
mypy_path = "../../crates/dice/src-py"

[tool.pyright]
extraPaths = ["../../crates/dice/src-py"]
pythonVersion = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example_client"]

[dependency-groups]
dev = ["mypy>=1,<2", "pyright>=1,<2", "pytest>=8,<9"]
