[project]
name = "basic-example"
version = "0.1.0"
description = "Python surface of the rspyts basic example."
requires-python = ">=3.13"
dependencies = ["rspyts", "numpy>=1.24", "pydantic>=2.7"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "ty>=0.0.1a1",
    "vulture>=2",
]

[tool.uv.sources]
rspyts = { path = "../../../runtimes/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/basic_example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=basic_example --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
