[package]
name = "basic-example"
description = "rspyts end-to-end example: a small, plain library exposed to Python and TypeScript."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rspyts = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
