[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "example"
version = "2.0.1"
requires-python = ">=3.11"
dependencies = ["pydantic>=2,<3", "numpy>=2,<3"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.pyi", "*.so", "*.pyd", "py.typed"]
