[package]
name = "cross-package-consumer"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["rspyts/python-extension"]
wasm = ["rspyts/wasm"]

[dependencies]
cross-package-owner = { path = "../../owner/rust" }
rspyts = { path = "../../../../crates/rspyts" }
serde = { version = "1", features = ["derive"] }
