[package]
name = "cross-package-hardware"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
bindings = []
python = ["rspyts/python-extension"]
wasm = ["rspyts/wasm", "dep:wasm-bindgen"]

[dependencies]
rspyts = { path = "../../../../crates/rspyts" }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
