[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "rspyts-owner-acceptance"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy>=2", "pydantic>=2.11"]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.maturin]
manifest-path = "../rust/Cargo.toml"
python-source = "../.rspyts/python"
module-name = "example.owner.contracts.native"
features = ["python"]
include = [{ path = "example/**/*", format = "wheel" }]

[tool.maturin.sbom]
rust = false

[tool.pytest.ini_options]
testpaths = ["tests"]
