[package]
name = "cross-package-owner"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["rspyts/python-extension"]
wasm = ["rspyts/wasm", "dep:wasm-bindgen"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
rspyts = { path = "../../../../crates/rspyts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasm-bindgen = { version = "=0.2.126", optional = true }
