[package]
name = "multi-crate-app"
description = "rspyts multi-crate example: an app crate bridging functions over shared-types."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rspyts = { workspace = true }
serde = { workspace = true }
shared-types = { path = "../../shared/rust" }
