[package]
name = "shared-types-module"
description = "rspyts multi-crate example: the standalone compiled module for shared-types."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rspyts = { workspace = true }
shared-types = { path = "../rust" }
