[package]
name = "shared-types"
description = "rspyts multi-crate example: the dependency crate whose types cross crate boundaries."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
# Standalone code generation needs module exports. Downstream Rust crates do
# not enable this feature, so their cdylibs still contain exactly one exporter.
standalone-module = []

[dependencies]
rspyts = { workspace = true }
